--- a/course.yml
+++ b/course.yml
@@ -1,4 +1,4 @@
 title: ML Intro using Wisconsin Breast Cancer Data Set
-description: A description of the course.
+description: Introduction to core concepts in setting up machine learning models using the Wisconsin Breast Cancer Data Set
 programming_language: python
 from: python-base-prod:v1.0.2
